Fix padding for CFY headers on mobile (#4225)

--- a/src/src/routes/Menu/MenuRecipesPage/RecommendationsHighlight/RecommendationsHighlight.css
+++ b/src/src/routes/Menu/MenuRecipesPage/RecommendationsHighlight/RecommendationsHighlight.css
@@ -17,3 +17,11 @@
 .divider {
   margin-bottom: 1.5rem;
 }
+
+.headerContainer {
+  padding: 0 0.75rem 0 0.75rem;
+
+  @media ScreenSMMin {
+    padding: 0;
+  }
+}
